k8s/stage/accountService.yaml
apiVersion: apps/v1beta2 # apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: accountService-deployment
  namespace: dev
  labels:
    app: accountService
spec:
  replicas: 2
  selector:
    matchLabels:
      app: accountService
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  
  minReadySeconds: 5
  
  template:
    metadata:
      namespace: dev
      labels:
        app: accountService
        ci: somedataForOverride1004        
    spec:
      containers:
      - name: accountService
        image: roured/tdtb-acc:1.0
        imagePullPolicy: Always
        ports:
        - containerPort: 5555
        readinessProbe:
          httpGet:
            path: /healthz
            port: 5555
        livenessProbe:
          httpGet:
            path: /healthz
            port: 5555
          initialDelaySeconds: 10
          timeoutSeconds: 1
---

kind: Service
apiVersion: v1
metadata:
  name: web-account
  namespace: dev
spec:
  selector:
    app: accountService
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 5555 
    
---
