k8s/stage/tracing-jaeger.yaml



  apiVersion: v1
  kind: Service
  metadata:
    namespace: dev
    name: cassandra
    labels:
      app: jaeger
      name: jaeger-cassandra-service
      jaeger-infra: cassandra-service
  spec:
    ports:
    - port: 7000
      name: intra-node
    - port: 7001
      name: tls-intra-node
    - port: 7199
      name: jmx
    - port: 9042
      name: cql
    - port: 9160
      name: thrift
    clusterIP: None
    selector:
      app: cassandra
---
  apiVersion: "apps/v1beta1"
  kind: StatefulSet
  metadata:
    namespace: dev
    name: cassandra
    labels:
      app: jaeger
      jaeger-infra: cassandra-statefulset
  spec:
    serviceName: cassandra
    replicas: 3
    template:
      metadata:
        namespace: dev
        labels:
          app: cassandra
          jaeger-infra: cassandra-replica
      spec:
        terminationGracePeriodSeconds: 1800
        containers:
        - name: cassandra
          image: cassandra:3.11
          command:
          - /docker-entrypoint.sh
          - "-R"
          ports:
          - containerPort: 7000
            name: intra-node
          - containerPort: 7001
            name: tls-intra-node
          - containerPort: 7199
            name: jmx
          - containerPort: 9042
            name: cql
          - containerPort: 9160
            name: thrift
          lifecycle:
            preStop:
              exec:
                command: ["/bin/sh", "-c", "nodetool drain"]
          volumeMounts:
          - name: cassandra-data
            mountPath: /var/lib/cassandra
          - name: cassandra-logs
            mountPath: /var/log/cassandra
        volumes:
        - name: cassandra-data
          emptyDir: {}
        - name: cassandra-logs
          emptyDir: {}
---
  apiVersion: batch/v1
  kind: Job
  metadata:
    namespace: dev
    name: jaeger-cassandra-schema-job
    labels:
      app: jaeger
      jaeger-infra: cassandra-schema-job
  spec:
    activeDeadlineSeconds: 120
    template:
      metadata:
        name: cassandra-schema
      spec:
        containers:
        - name: jaeger-cassandra-schema
          image: jaegertracing/jaeger-cassandra-schema:1.2
          env:
            - name: MODE
              value: "prod"
            - name: DATACENTER
              value: "dc1"
        restartPolicy: OnFailure


---




---
  apiVersion: extensions/v1beta1
  kind: Deployment
  metadata:
    namespace: dev
    name: jaeger-collector
    labels:
      app: jaeger
      jaeger-infra: collector-deployment
  spec:
    replicas: 1
    strategy:
      type: Recreate
    template:
      metadata:
        labels:
          app: jaeger
          jaeger-infra: collector-pod
      spec:
        containers:
        - image: jaegertracing/jaeger-collector:1.2
          name: jaeger-collector
          command:
            - "/go/bin/collector-linux"
            - "--config-file=/conf/collector.yaml"
            - "--log-level=debug"
          ports:
          - containerPort: 14267
            protocol: TCP
          - containerPort: 14268
            protocol: TCP
          - containerPort: 9411
            protocol: TCP
          volumeMounts:
          - name: jaeger-configuration-volume
            mountPath: /conf
        volumes:
          - configMap:
              name: jaeger-configuration
              items:
                - key: collector
                  path: collector.yaml
            name: jaeger-configuration-volume
---
  apiVersion: v1
  kind: Service
  metadata:
    namespace: dev
    name: jaeger-collector
    labels:
      app: jaeger
      jaeger-infra: collector-service
  spec:
    ports:
    - name: jaeger-collector-tchannel
      port: 14267
      protocol: TCP
      targetPort: 14267
    - name: jaeger-collector-http
      port: 14268
      protocol: TCP
      targetPort: 14268
    - name: jaeger-collector-zipkin
      port: 9411
      protocol: TCP
      targetPort: 9411
    selector:
      jaeger-infra: collector-pod
    type: ClusterIP
---
  apiVersion: v1
  kind: Service
  metadata:
    namespace: dev
    name: zipkin
    labels:
      app: jaeger
      jaeger-infra: zipkin-service
  spec:
    ports:
    - name: jaeger-collector-zipkin
      port: 9411
      protocol: TCP
      targetPort: 9411
    selector:
      jaeger-infra: collector-pod
    type: ClusterIP
---
  apiVersion: extensions/v1beta1
  kind: Deployment
  metadata:
    namespace: dev
    name: jaeger-query
    labels:
      app: jaeger
      jaeger-infra: query-deployment
  spec:
    replicas: 1
    strategy:
      type: Recreate
    template:
      metadata:
        namespace: dev
        labels:
          app: jaeger
          jaeger-infra: query-pod
      spec:
        containers:
        - image: jaegertracing/jaeger-query:1.2
          name: jaeger-query
          command:
            - "/go/bin/query-linux"
            - "--config-file=/conf/query.yaml"
          ports:
          - containerPort: 16686
            protocol: TCP
          readinessProbe:
            httpGet:
              path: "/"
              port: 16686
          volumeMounts:
          - name: jaeger-configuration-volume
            mountPath: /conf
        - name: frontend
          image: nginx:alpine
          command: ["/usr/sbin/nginx"]
          ports:
          - name: http
            containerPort: 80        
          volumeMounts:
          - name: basic-auth-jaeger
            mountPath: "/nginx/passwd"
            readOnly: true
          - name: nginx-conf-jaeger
            mountPath: /etc/nginx/nginx.conf
            subPath: nginx.conf
        volumes:
          - configMap:
              name: jaeger-configuration
              items:
                - key: query
                  path: query.yaml
            name: jaeger-configuration-volume
          - name: basic-auth-jaeger
            secret:
              secretName: basic-auth-jaeger
          - name: nginx-conf-jaeger
            configMap:
              name: jaeger-nginx-conf
---
  apiVersion: v1
  kind: Service
  metadata:
    namespace: dev
    name: jaeger-query
    labels:
      app: jaeger
      jaeger-infra: query-service
  spec:
    ports:
    - name: jaeger-query
      port: 80
      protocol: TCP
      targetPort: 80
    selector:
      jaeger-infra: query-pod
    type: LoadBalancer
---
  apiVersion: extensions/v1beta1
  kind: DaemonSet
  metadata:
    namespace: dev
    name: jaeger-agent
    labels:
      app: jaeger
      jaeger-infra: agent-daemonset
  spec:
    template:
      metadata:
        labels:
          namespace: dev
          app: jaeger
          jaeger-infra: agent-instance
      spec:
        containers:
        - name: agent-instance
          image: jaegertracing/jaeger-agent:1.2
          command:
          - "/go/bin/agent-linux"
          - "--config-file=/conf/agent.yaml"
          volumeMounts:
          - name: jaeger-configuration-volume
            mountPath: /conf
          ports:
          - containerPort: 5775
            hostPort: 5775
            protocol: UDP
# iptables -A INPUT -p udp -s localhost --dport 5775 -j ACCEPT
# iptables -A INPUT -p udp --dport 5775 -j DROP                      
          - containerPort: 6831
            hostPort: 6831
            protocol: UDP
          - containerPort: 6832
            hostPort: 6832
            protocol: UDP
        hostNetwork: true
        dnsPolicy: ClusterFirstWithHostNet
        volumes:
          - configMap:
              name: jaeger-configuration
              items:
                - key: agent
                  path: agent.yaml
            name: jaeger-configuration-volume
